<fix> project solution text overflows. <improve> project breakpoints

--- a/Lesson5/Project/Solution/main.css
+++ b/Lesson5/Project/Solution/main.css
@@ -67,8 +67,8 @@ ul {
 
 .header__title {
   font-weight: 300;
-  font-size: 4em;
-  margin: 0.5em 0.25em;
+  font-size: 3em;
+  margin: 0.75em 0.25em;
   display: inline-block;
   color: #212121;
 }
@@ -145,7 +145,7 @@ main {
   position: relative;
   background-image: url("./images/dog.jpg");
   background-size: cover;
-  height: 300px;
+  min-height: 300px;
 }
 
 .hero article {
@@ -154,7 +154,6 @@ main {
   background-color: rgba(0, 0, 0, 0.7);
   position: absolute;
   bottom: 0;
-  height: 40%;
   width: 100%;
   color: #fff;
   padding: 1em;
@@ -168,7 +167,7 @@ main {
  */
 
 .top-news {
-  height: 300px;
+  min-height: 300px;
   border-bottom: 1px solid #E0E0E0;
   padding: 1em;
   width: 100%;
@@ -272,7 +271,7 @@ main {
   font-size: 1.5em;
 }
 
-.weather__desc {
+.weather__ {
   display: block;
   font-size: 1.2em;
 }
